--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,1 +1,9 @@
 /* This file is for your main application css. */
+
+#list {
+  border: 1px solid black;
+  height: 300px;
+  padding: 5px;
+  overflow: scroll;
+  margin-bottom: 30px;
+}
